--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<a class="weatherwidget-io" href="https://forecast7.com/en/41d1916d67/giovinazzo/" data-label_1="GIOVINAZZO" data-label_2="WEATHER" data-font="Helvetica" data-theme="original" data-basecolor="#77a9ca" data-accent="rgba(255, 255, 255, 0)" >GIOVINAZZO WEATHER</a>
+<a class="weatherwidget-io" href="https://forecast7.com/en/41d1916d67/giovinazzo/" data-label_1="GIOVINAZZO" data-label_2="WEATHER" data-theme="pure" data-basecolor="rgba(255, 255, 255, 0)" data-accent="rgba(1, 1, 1, 0)" >GIOVINAZZO WEATHER</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
-
